<resources>
    <string name="app_name">Garage6</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Auto Care</string>
    <string name="nav_header_subtitle">username@mail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_book">Bookings</string>
    <string name="menu_your_cars">Your Cars</string>
    <string name="menu_Shop">Auto shop</string>

    <string name="menu_booking">Booking</string>
    <string name="new_booking">New</string>
    <string name="save">Save</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_gallery_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_slideshow_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="make">MAKE</string>
    <string name="model">Model</string>
    <string name="plate">Number Plate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
